// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing analytics sale chart component Should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tremor-Card-root relative w-full text-left rounded-tremor-default bg-tremor-background ring-tremor-ring shadow-tremor-card dark:bg-dark-tremor-background dark:ring-dark-tremor-ring dark:shadow-dark-tremor-card border-tremor-brand dark:border-dark-tremor-brand group overflow-visible p-4 mb-12 border-none ring-0 md:w-[calc(50%-0.75rem)] md:mr-6 md:even:mr-0 md:last:mr-0 lg:even:mr-6 analytics-info"
      >
        <div
          class="tremor-Flex-root flex w-full justify-start flex-col items-start -mt-10"
        >
          <div
            class="tremor-Flex-root flex w-full flex-row justify-between items-center relative duration-500 ease-[cubic-bezier(0.34,1.61,0.7,1)] translate-y-0 group-hover:-translate-y-12 transition-all"
          >
            <img
              alt="Cozy 5 Stars Apartment"
              class="relative w-full rounded-xl shadow-lg z-10"
              data-nimg="1"
              decoding="async"
              height="533"
              loading="lazy"
              sizes="(min-width: 768px) 33vw, 70vw"
              src="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=3840&q=75"
              srcset="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=256&q=75 256w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=384&q=75 384w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=640&q=75 640w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=750&q=75 750w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=828&q=75 828w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=1080&q=75 1080w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=1200&q=75 1200w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=1920&q=75 1920w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=2048&q=75 2048w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=3840&q=75 3840w"
              style="color: transparent;"
              width="800"
            />
            <div
              class="w-full h-full absolute shadow-[0rem_0.25rem_0.375rem_-0.0625rem_rgba(0,0,0,0.1),0rem_0.125rem_0.25rem_-0.0625rem_rgba(0,0,0,0.06)] bg-black opacity-30 blur-md bg-cover rounded-lg scale-[0.94] left-0 -bottom-1"
            />
          </div>
          <div
            class="tremor-Flex-root flex w-full justify-between items-center flex-col pt-7 px-2"
          >
            <div
              class="tremor-Flex-root flex w-full flex-row items-center justify-center cursor-pointer -mt-14"
            >
              <svg
                class="text-[#e91e63] text-xl mx-6"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M17.65 6.35A7.958 7.958 0 0012 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08A5.99 5.99 0 0112 18c-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
                />
              </svg>
              <svg
                class="text-tremor-content-title text-xl mx-6"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
            </div>
            <p
              class="text-tremor-title text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis w-full font-normal text-xl text-center leading-snug capitalize mt-8 mb-2"
            >
              Cozy 5 Stars Apartment
            </p>
            <p
              class="text-tremor-default text-tremor-content dark:text-dark-tremor-content flex-wrap !text-base font-light leading-[1.6] tracking-[0.01071em] text-center"
            >
              The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona.
            </p>
          </div>
          <div
            class="w-full h-px bg-[linear-gradient(to_right,rgba(52,71,103,0),rgba(52,71,103,0.4),rgba(52,71,103,0))] opacity-25 my-6"
          />
          <div
            class="tremor-Flex-root flex w-full flex-row justify-between items-center p-2 pt-0"
          >
            <div
              class="tremor-Flex-root flex w-full flex-row justify-between items-center"
            >
              <p
                class="text-tremor-default text-tremor-content dark:text-dark-tremor-content flex-wrap !text-base leading-[1.6] tracking-[0.01071em] text-center"
              >
                $
                899
                /night
              </p>
            </div>
            <div
              class="tremor-Flex-root flex w-full flex-row items-center justify-end"
            >
              <svg
                class="text-tremor-content text-xl mr-1"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 010-5 2.5 2.5 0 010 5z"
                />
              </svg>
              <p
                class="text-tremor-default text-tremor-content dark:text-dark-tremor-content font-light"
              >
                Barcelona, Spain
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tremor-Card-root relative w-full text-left rounded-tremor-default bg-tremor-background ring-tremor-ring shadow-tremor-card dark:bg-dark-tremor-background dark:ring-dark-tremor-ring dark:shadow-dark-tremor-card border-tremor-brand dark:border-dark-tremor-brand group overflow-visible p-4 mb-12 border-none ring-0 md:w-[calc(50%-0.75rem)] md:mr-6 md:even:mr-0 md:last:mr-0 lg:even:mr-6 analytics-info"
    >
      <div
        class="tremor-Flex-root flex w-full justify-start flex-col items-start -mt-10"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative duration-500 ease-[cubic-bezier(0.34,1.61,0.7,1)] translate-y-0 group-hover:-translate-y-12 transition-all"
        >
          <img
            alt="Cozy 5 Stars Apartment"
            class="relative w-full rounded-xl shadow-lg z-10"
            data-nimg="1"
            decoding="async"
            height="533"
            loading="lazy"
            sizes="(min-width: 768px) 33vw, 70vw"
            src="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=3840&q=75"
            srcset="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=256&q=75 256w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=384&q=75 384w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=640&q=75 640w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=750&q=75 750w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=828&q=75 828w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=1080&q=75 1080w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=1200&q=75 1200w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=1920&q=75 1920w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=2048&q=75 2048w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=3840&q=75 3840w"
            style="color: transparent;"
            width="800"
          />
          <div
            class="w-full h-full absolute shadow-[0rem_0.25rem_0.375rem_-0.0625rem_rgba(0,0,0,0.1),0rem_0.125rem_0.25rem_-0.0625rem_rgba(0,0,0,0.06)] bg-black opacity-30 blur-md bg-cover rounded-lg scale-[0.94] left-0 -bottom-1"
          />
        </div>
        <div
          class="tremor-Flex-root flex w-full justify-between items-center flex-col pt-7 px-2"
        >
          <div
            class="tremor-Flex-root flex w-full flex-row items-center justify-center cursor-pointer -mt-14"
          >
            <svg
              class="text-[#e91e63] text-xl mx-6"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M17.65 6.35A7.958 7.958 0 0012 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08A5.99 5.99 0 0112 18c-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
              />
            </svg>
            <svg
              class="text-tremor-content-title text-xl mx-6"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </div>
          <p
            class="text-tremor-title text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis w-full font-normal text-xl text-center leading-snug capitalize mt-8 mb-2"
          >
            Cozy 5 Stars Apartment
          </p>
          <p
            class="text-tremor-default text-tremor-content dark:text-dark-tremor-content flex-wrap !text-base font-light leading-[1.6] tracking-[0.01071em] text-center"
          >
            The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona.
          </p>
        </div>
        <div
          class="w-full h-px bg-[linear-gradient(to_right,rgba(52,71,103,0),rgba(52,71,103,0.4),rgba(52,71,103,0))] opacity-25 my-6"
        />
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center p-2 pt-0"
        >
          <div
            class="tremor-Flex-root flex w-full flex-row justify-between items-center"
          >
            <p
              class="text-tremor-default text-tremor-content dark:text-dark-tremor-content flex-wrap !text-base leading-[1.6] tracking-[0.01071em] text-center"
            >
              $
              899
              /night
            </p>
          </div>
          <div
            class="tremor-Flex-root flex w-full flex-row items-center justify-end"
          >
            <svg
              class="text-tremor-content text-xl mr-1"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 010-5 2.5 2.5 0 010 5z"
              />
            </svg>
            <p
              class="text-tremor-default text-tremor-content dark:text-dark-tremor-content font-light"
            >
              Barcelona, Spain
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing analytics sale chart component testing component analytics info card render when have data 1`] = `
<div>
  <div
    class="tremor-Card-root relative w-full text-left rounded-tremor-default bg-tremor-background ring-tremor-ring shadow-tremor-card dark:bg-dark-tremor-background dark:ring-dark-tremor-ring dark:shadow-dark-tremor-card border-tremor-brand dark:border-dark-tremor-brand group overflow-visible p-4 mb-12 border-none ring-0 md:w-[calc(50%-0.75rem)] md:mr-6 md:even:mr-0 md:last:mr-0 lg:even:mr-6 analytics-info"
  >
    <div
      class="tremor-Flex-root flex w-full justify-start flex-col items-start -mt-10"
    >
      <div
        class="tremor-Flex-root flex w-full flex-row justify-between items-center relative duration-500 ease-[cubic-bezier(0.34,1.61,0.7,1)] translate-y-0 group-hover:-translate-y-12 transition-all"
      >
        <img
          alt="Cozy 5 Stars Apartment"
          class="relative w-full rounded-xl shadow-lg z-10"
          data-nimg="1"
          decoding="async"
          height="533"
          loading="lazy"
          sizes="(min-width: 768px) 33vw, 70vw"
          src="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=3840&q=75"
          srcset="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=256&q=75 256w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=384&q=75 384w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=640&q=75 640w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=750&q=75 750w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=828&q=75 828w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=1080&q=75 1080w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=1200&q=75 1200w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=1920&q=75 1920w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=2048&q=75 2048w, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-info-1.webp&w=3840&q=75 3840w"
          style="color: transparent;"
          width="800"
        />
        <div
          class="w-full h-full absolute shadow-[0rem_0.25rem_0.375rem_-0.0625rem_rgba(0,0,0,0.1),0rem_0.125rem_0.25rem_-0.0625rem_rgba(0,0,0,0.06)] bg-black opacity-30 blur-md bg-cover rounded-lg scale-[0.94] left-0 -bottom-1"
        />
      </div>
      <div
        class="tremor-Flex-root flex w-full justify-between items-center flex-col pt-7 px-2"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row items-center justify-center cursor-pointer -mt-14"
        >
          <svg
            class="text-[#e91e63] text-xl mx-6"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M17.65 6.35A7.958 7.958 0 0012 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08A5.99 5.99 0 0112 18c-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
            />
          </svg>
          <svg
            class="text-tremor-content-title text-xl mx-6"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </div>
        <p
          class="text-tremor-title text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis w-full font-normal text-xl text-center leading-snug capitalize mt-8 mb-2"
        >
          Cozy 5 Stars Apartment
        </p>
        <p
          class="text-tremor-default text-tremor-content dark:text-dark-tremor-content flex-wrap !text-base font-light leading-[1.6] tracking-[0.01071em] text-center"
        >
          The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona.
        </p>
      </div>
      <div
        class="w-full h-px bg-[linear-gradient(to_right,rgba(52,71,103,0),rgba(52,71,103,0.4),rgba(52,71,103,0))] opacity-25 my-6"
      />
      <div
        class="tremor-Flex-root flex w-full flex-row justify-between items-center p-2 pt-0"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center"
        >
          <p
            class="text-tremor-default text-tremor-content dark:text-dark-tremor-content flex-wrap !text-base leading-[1.6] tracking-[0.01071em] text-center"
          >
            $
            899
            /night
          </p>
        </div>
        <div
          class="tremor-Flex-root flex w-full flex-row items-center justify-end"
        >
          <svg
            class="text-tremor-content text-xl mr-1"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 010-5 2.5 2.5 0 010 5z"
            />
          </svg>
          <p
            class="text-tremor-default text-tremor-content dark:text-dark-tremor-content font-light"
          >
            Barcelona, Spain
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
